End of section 4

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -5,10 +5,10 @@
     <!--Angular control flow to loop throught the members list-->
     @for (member of members(); track member.id) { 
     <li class="list-row items-center">
-        <img src="/user.png" alt="user avatar" class="size-12 rounded-box">
+        <img src="/R.png" alt="user avatar" class="size-12 rounded-box">
 
         <div>
-            <h1>{{member.display}}</h1>
+            <h1>{{member.displayName}}</h1>
         </div>
     </li>
     }
