--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,20 +1,5 @@
-<div class="card bg-base-100 w-1/2 mx-auto p-10 mt-10 shadow-xl">
-<h2 class="text-3xl text-red-500 font-bold">{{title}}</h2>
+<app-nav />
 
-<ul class="list">
-    <!--Angular control flow to loop throught the members list-->
-    @for (member of members(); track member.id) { 
-    <li class="list-row items-center">
-        <img src="/R.png" alt="user avatar" class="size-12 rounded-box">
-
-        <div>
-            <h1>{{member.displayName}}</h1>
-        </div>
-    </li>
-    }
-
-</ul>
-
-</div>
+<app-home />
 
 
