--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,6 +1,11 @@
 <app-nav />
 
-<div class="mt-24 container mx-auto">
+<div 
+[class.mt-24]="router.url !== '/'"
+[class.container]="router.url !== '/'"
+[class.mx-auto]="router.url !== '/'"
+>
+
     <router-outlet />
 </div>
 
