--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -17,7 +17,9 @@
       @if (accountService.currentUser()){
         <a routerLink="/members" routerLinkActive="text-accent" >Matches</a>
         <a routerLink="/lists" routerLinkActive="text-accent">Lists</a>
-        <a routerLinl="/messages" routerLinkActive="text-accent">Messages</a>
+        <a routerLink="/messages" routerLinkActive="text-accent">Messages</a>
+        <a routerLink="/errors" routerLinkActive="text-accent">Errors</a>       
+
       }
     </nav>
 
